# Quorum

./: .envrc  .gitignore  .pre-commit-config.yaml  DEVREADME.md  LICENSE  MANIFEST.in  Makefile  README.md  ipfs_validator_README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  version
.github/: CODEOWNERS
.github/actions/: test_steps.yml
.github/actions/test_steps/: action.yml
.github/workflows/: CI.yml  ci.yml  publish-pypi.yml  regression.yml  reusable-test-steps.yml  update-version.yml
ProposalTools/: check_proposal.py  config.py  execution.json  main.py
ProposalTools/API/: APIManager.py  api_manager.py  chainlink_api.py  contract_source_code_api.py
ProposalTools/APIs/: AbsSourceCode.py
ProposalTools/APIs/ETHScan/: ETHScanAPI.py
ProposalTools/Checks/: __init__.py  check.py  diff.py  feed_price.py  global_variables.py  new_listing.py
ProposalTools/GIT/: GitManager.py  git_manager.py
ProposalTools/Utils/: chain_enum.py  source_code.py
ProposalTools/apis/: chainlink_api.py  web3_client.py
ProposalTools/apis/block_explorers/: chains_api.py  source_code.py
ProposalTools/apis/contract_code/: contract_source_code_api.py  source_code.py
ProposalTools/checks/: check.py  diff.py  feed_price.py  global_variables.py  new_listing.py
ProposalTools/git_api/: git_manager.py
ProposalTools/tests/: blockchain_api_test.py
ProposalTools/utils/: chain_enum.py  pretty_printer.py
Quorum/: __version__.py  check_proposal.py  config.py  execution.json  ground_truth.json  ipfs_validation_prompt.txt  ipfs_validator.py  regression.json  repos.json
Quorum/apis/: chainlink_api.py
Quorum/apis/block_explorers/: chains_api.py  source_code.py
Quorum/apis/git_api/: git_manager.py
Quorum/apis/governance/: aave_governance.py  data_models.py
Quorum/apis/llms/: claude_conversation.py  llm_conversation.py
Quorum/apis/price_feeds/: __init__.py  chainlink_api.py  chronicle_api.py  coingecko_api.py  price_feed_providers.py  price_feed_utils.py
Quorum/auto_report/: AaveReportTemplate.md  AaveReportTemplate.md.j2  aave_tags.py  create_report.py  create_report_README.md  report_generator.py  tags.py
Quorum/checks/: __init__.py  check.py  diff.py  feed_price.py  global_variables.py  new_listing.py  price_feed.py  proposal_check.py  review_diff.py
Quorum/entry_points/: check_proposal.py  check_proposal_config.py  check_proposal_id.py  cli_arguments.py  create_report.py  ipfs_validator.py  quorum_cli.py  setup_quorum.py
Quorum/entry_points/implementations/: check_proposal.py  check_proposal_config.py  check_proposal_id.py  create_report.py  ipfs_validator.py  setup_quorum.py
Quorum/llm/: jinja_utils.py
Quorum/llm/chains/: cached_llm.py  first_deposit_chain.py  ipfs_validation_chain.py
Quorum/llm/prompts/: first_deposit_prompt.j2  ipfs_validation_prompt_part1.j2
Quorum/templates/: .env.example  README.md  Readme.md
Quorum/tests/: blockchain_api_test.py  conftest.py  ground_truth.json  regression.json  test_auto_report.py  test_checks.py  test_llm.py  test_price_feed.py  test_price_feed_providers.py  test_source_code.py  utils.py
Quorum/tests/checks/: test_checks.py  test_price_feed.py
Quorum/tests/expected/test_auto_report/: v3-132.md
Quorum/tests/expected/test_llm/: first_deposit_chain.json
Quorum/utils/: arg_validations.py  chain_enum.py  config.py  config_loader.py  load_env.py  pretty_printer.py  quorum_configuration.py  singleton.py
src/quorum/apis/block_explorers/: bytecode.py  chains_api.py  source_code.py
src/quorum/apis/git_api/: git_manager.py
src/quorum/apis/governance/: aave_governance.py  data_models.py
src/quorum/apis/multisig/: safe_api.py
src/quorum/apis/price_feeds/: __init__.py  chainlink_api.py  chronicle_api.py  coingecko_api.py  coinmcc_api.py  price_feed_utils.py
src/quorum/auto_report/: AaveReportTemplate.md.j2  aave_tags.py
src/quorum/checks/: __init__.py  check.py  diff.py  global_variables.py  new_listing.py  price_feed.py  proposal_check.py  review_diff.py
src/quorum/entry_points/: cli_arguments.py  quorum_cli.py
src/quorum/entry_points/implementations/: check_bytecode.py  check_local_proposal.py  check_proposal.py  check_proposal_config.py  check_proposal_id.py  create_report.py  ipfs_validator.py  setup_quorum.py
src/quorum/llm/: jinja_utils.py
src/quorum/templates/: .env.example  execution.json  ground_truth.json
src/quorum/tests/: blockchain_api_test.py  conftest.py  ground_truth.json  regression.json  test_auto_report.py  test_bytecode_api.py  test_checks.py  test_llm.py  test_mutisig_api.py  test_price_feed.py  test_price_feed_providers.py  test_source_code.py
src/quorum/utils/: arg_validations.py  chain_enum.py  change_directory.py  compile.py  exceptions.py  load_env.py  pretty_printer.py  quorum_configuration.py
(+41 files in other folders)
