[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certora-quorum"
description = "Quorum: Open-Source Governance Security Tool for Web3 Protocols"
authors = [
    {name = "Certora", email = "support@certora.com"},
    {name = "Niv Vaknin", email = "niv@certora.com"},
    {name = "Liav Katry", email = "liav@certora.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Quorum", "Proposals", "Reports"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "Quorum.__version__"}

[project.urls]
Homepage = "https://github.com/Certora/Quorum"
Source = "https://github.com/Certora/Quorum"

[project.scripts]
quorum = "Quorum.entry_points.quorum_cli:main"

[tool.setuptools]
include-package-data = true
